# Jirachi

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/: android_compat.h  buffer.h  classfile.h  hashtable.h  hook_manager.h  internal.h  jnihook.h  mutex.h
src/: android_compat.c  buffer.c  classfile.c  hashtable.c  hook_manager.c  jnihook.c  mutex.c
tests/: CMakeLists.txt  TestClass.java  test_hook.c
